@@ -1341,6 +1341,7 @@ Length is +0000000134 with 02, 03, 01, 04, 00
 
 AT_CLEANUP
 
+
 AT_SETUP([DEPENDING ON with ODOSLIDE])
 AT_KEYWORDS([MOVE])
 
@@ -1355,8 +1356,8 @@ AT_DATA([prog.cob], [
       *
        01 WITHOUT-ODO.
           02 DATA1   PIC X(1).
-          02 DEP1    PIC 9(1).
-          02 DEP2    PIC 9(1).
+          02 DEP1    PIC 9(1) VALUE 0.
+          02 DEP2    PIC 9(1) VALUE 0.
           02 GROUP1  OCCURS 2 TIMES.
              03 DATA11   PIC X(1).
           02 GROUP2  OCCURS 3 TIMES.
@@ -1366,8 +1367,8 @@ AT_DATA([prog.cob], [
       *
        01 WITH-ODO.
           02 ODO-DATA1   PIC X(1).
-          02 ODO-DEP1    PIC 9(1).
-          02 ODO-DEP2    PIC 9(1).
+          02 ODO-DEP1    PIC 9(1) VALUE 0.
+          02 ODO-DEP2    PIC 9(1) VALUE 0.
           02 ODO-GROUP1  OCCURS 0 TO 2 TIMES DEPENDING ON ODO-DEP1.
              03 ODO-DATA11   PIC X(1).
           02 ODO-GROUP2  OCCURS 0 TO 3 TIMES DEPENDING ON ODO-DEP2.
@@ -1391,7 +1392,7 @@ AT_DATA([prog.cob], [
        TEST1.
            MOVE "A01  B  CD" TO WITHOUT-ODO
            DISPLAY "********"
-           DISPLAY "TEST WITHOUT ODO:"
+           DISPLAY "TEST WITHOUT ODO: '" WITHOUT-ODO "'"
            DISPLAY "DATA1=" DATA1
            DISPLAY "DEP1="  DEP1.
            DISPLAY "DEP2="  DEP2
@@ -1401,25 +1402,34 @@ AT_DATA([prog.cob], [
 
        TEST2.
            MOVE "A01BCD" TO WITH-ODO 
-           DISPLAY "********"
-           DISPLAY "TEST WITH ODO:"
-           DISPLAY "ODO-DATA1=" ODO-DATA1
-           DISPLAY "ODO-DEP1="  ODO-DEP1
-           DISPLAY "ODO-DEP2="  ODO-DEP2
-           DISPLAY "ODO-DATA21(1)="  ODO-DATA21 (1)
-           DISPLAY "ODO-DATA3="  ODO-DATA3
+           DISPLAY "TEST WITH ODO: '" WITH-ODO "'"
+           DISPLAY "ODO-DATA1=" ODO-DATA1 "."
+           DISPLAY "ODO-DEP1="  ODO-DEP1 "."
+           DISPLAY "ODO-DEP2="  ODO-DEP2 "."
+           DISPLAY "ODO-DATA21(1)="  ODO-DATA21 (1) "."
+           DISPLAY "ODO-DATA3="  ODO-DATA3 "."
+
+           MOVE "A12BCDEF" TO WITH-ODO 
+           DISPLAY "TEST WITH ODO: '" WITH-ODO "'"
+           DISPLAY "ODO-DATA1=" ODO-DATA1 "."
+           DISPLAY "ODO-DEP1="  ODO-DEP1 "."
+           DISPLAY "ODO-DEP2="  ODO-DEP2 "."
+           DISPLAY "ODO-DATA11(1)="  ODO-DATA11 (1) "."
+           DISPLAY "ODO-DATA21(1)="  ODO-DATA21 (1) "."
+           DISPLAY "ODO-DATA21(2)="  ODO-DATA21 (2) "."
+           DISPLAY "ODO-DATA3="  ODO-DATA3 "."
            .
 
        TEST3.
            MOVE "A01" TO WITH-ODO (1:3)
            MOVE "BCD" TO WITH-ODO (4:3)
            DISPLAY "********"
-           DISPLAY "TEST WITH ODO, SEPERATED:"
-           DISPLAY "ODO-DATA1=" ODO-DATA1
-           DISPLAY "ODO-DEP1="  ODO-DEP1
-           DISPLAY "ODO-DEP2="  ODO-DEP2
-           DISPLAY "ODO-DATA21(1)="  ODO-DATA21 (1)
-           DISPLAY "ODO-DATA3="  ODO-DATA3
+           DISPLAY "TEST WITH ODO, SEPERATED: '" WITH-ODO "'"
+           DISPLAY "ODO-DATA1=" ODO-DATA1 "."
+           DISPLAY "ODO-DEP1="  ODO-DEP1 "."
+           DISPLAY "ODO-DEP2="  ODO-DEP2 "."
+           DISPLAY "ODO-DATA21(1)="  ODO-DATA21 (1) "."
+           DISPLAY "ODO-DATA3="  ODO-DATA3 "."
            .
   
 
@@ -1451,29 +1461,96 @@ AT_DATA([prog.cob], [
 AT_CHECK([cobc -x -std=ibm -w -fodoslide prog.cob ], [0], [], [])
 
 AT_CHECK([./prog], [0], [********
-TEST WITHOUT ODO:
+TEST WITHOUT ODO: 'A01  B  CD'
 DATA1=A
 DEP1=0
 DEP2=1
 DATA21(1)=B
 DATA3=CD
+TEST WITH ODO: 'A01BCD'
+ODO-DATA1=A.
+ODO-DEP1=0.
+ODO-DEP2=1.
+ODO-DATA21(1)=B.
+ODO-DATA3=CD.
+TEST WITH ODO: 'A12BCDEF'
+ODO-DATA1=A.
+ODO-DEP1=1.
+ODO-DEP2=2.
+ODO-DATA11(1)=B.
+ODO-DATA21(1)=C.
+ODO-DATA21(2)=D.
+ODO-DATA3=EF.
 ********
-TEST WITH ODO:
-ODO-DATA1=A
-ODO-DEP1=0
-ODO-DEP2=1
-ODO-DATA21(1)=B
-ODO-DATA3=CD
-********
-TEST WITH ODO, SEPERATED:
-ODO-DATA1=A
-ODO-DEP1=0
-ODO-DEP2=1
-ODO-DATA21(1)=B
-ODO-DATA3=CD
+TEST WITH ODO, SEPERATED: 'A01BCD'
+ODO-DATA1=A.
+ODO-DEP1=0.
+ODO-DEP2=1.
+ODO-DATA21(1)=B.
+ODO-DATA3=CD.
 ********
 Slided ODO : '2123123End'
 Slided ODO : '2126123456End'
+], [])
+
+AT_CLEANUP
+
+
+AT_SETUP([DEPENDING ON with ODOSLIDE])
+AT_KEYWORDS([Subroutine])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01    WS-LINE.
+          03 WS-LINE-LEN PIC S9(4) COMP-5.
+          03 WS-LINE-TEXT.
+              04 WS-BYTE PIC X(1) OCCURS 1 TO 132 DEPENDING WS-LINE-LEN.
+
+       PROCEDURE DIVISION.
+       A-MAIN SECTION.
+
+             MOVE 5 TO WS-LINE-LEN
+             MOVE 'HELLO' TO WS-LINE-TEXT ( 1 : )
+             DISPLAY 'Pre CALL DATA :' WS-LINE-TEXT ':'
+             DISPLAY 'LENGTH IS ' LENGTH OF WS-LINE-TEXT
+
+             CALL 'BUGSUB' USING WS-LINE
+
+             DISPLAY 'Post CALL DATA :' WS-LINE-TEXT ':'
+             DISPLAY 'LENGTH IS ' LENGTH OF WS-LINE-TEXT
+
+             STOP RUN.
+
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. BUGSUB.
+       DATA DIVISION.
+       LINKAGE SECTION.
+        01  GENERIC-AREA.
+           03 GENERIC-AREA-LEN PIC S9(4) COMP-5.
+           03 GENERIC-AREA-TEXT.
+              04 GEN-BYTE PIC X(1) OCCURS 1 TO 32000
+                    DEPENDING GENERIC-AREA-LEN.
+
+       PROCEDURE DIVISION USING GENERIC-AREA.
+       A-MAIN SECTION.
+
+          MOVE 7 TO GENERIC-AREA-LEN
+          MOVE 'GOODBYE' TO GENERIC-AREA-TEXT
+          GOBACK.
+
+           END PROGRAM BUGSUB.
+       END PROGRAM prog.
+])
+
+AT_CHECK([cobc -x -std=ibm -w -fodoslide prog.cob ], [0], [], [])
+
+AT_CHECK([./prog], [0], [Pre CALL DATA :HELLO:
+LENGTH IS 0000000005
+Post CALL DATA :GOODBYE:
+LENGTH IS 0000000007
 ], [])
 
 AT_CLEANUP
